cluster/config/vault/vault-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  hosts:
  - "vault.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: vault-0
        port:
          number: 8200
